--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,50 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.harun.getjob">
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".SignupActivity"></activity>
-
-        <activity android:name=".UserIntro"
-            android:theme="@style/AppTheme2">
-
-        </activity>
-        <activity android:name=".MapsActivityCurrentPlace">
-
-
-        </activity>
-        <activity android:name=".AdvertCompany">
-
-        </activity>
+        <activity android:name=".SignupActivity" />
+        <activity
+            android:name=".UserIntro"
+            android:theme="@style/AppTheme2"></activity>
+        <activity android:name=".MapsActivityCurrentPlace"></activity>
+        <activity android:name=".AdvertCompany"></activity>
         <activity android:name=".Login">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDEf8QNnqFNFsCz_uHOacvTVuCFNwk03sU"/>
+            android:value="AIzaSyDEf8QNnqFNFsCz_uHOacvTVuCFNwk03sU" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".profilPage"></activity>
     </application>
 
 </manifest>
