--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
         applicationId "com.example.harun.getjob"
         minSdkVersion 23
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,20 +20,22 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-auth:11.2.0'
-    implementation 'com.google.firebase:firebase-database:11.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.android.gms:play-services:11.2.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.2.0'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    compile 'com.google.android.gms:play-services:11.2.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
-
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+    testCompile 'junit:junit:4.12'
 
 }
 
