--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
     compile 'com.android.support:cardview-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     testCompile 'junit:junit:4.12'
