--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".UserIntro"
 
-            android:theme="@style/AppTheme2" />
+
+        <activity
+
+            android:name=".UserIntro"
+            android:theme="@style/AppTheme2">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
+
+
+
         <activity android:name=".MapsActivityCurrentPlace" />
         <activity android:name=".AdvertCompany" />
 
 
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
 
         </activity>
@@ -42,11 +52,13 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".Profile.profilPage"  android:theme="@style/AppTheme2">
+            android:name=".Profile.profilPage"
+            android:theme="@style/AppTheme2">
 
 
         </activity>
-        <activity android:name=".Profile.EditProfile"
+        <activity
+            android:name=".Profile.EditProfile"
             android:theme="@style/AppTheme2">
 
         </activity>
