--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 
     compile 'com.firebaseui:firebase-ui-auth:3.2.1'
     compile 'com.google.android.gms:play-services:11.8.0'
-
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 
     // Required only if Facebook activity_login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
