--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +22,8 @@ allprojects {
         jcenter()
 
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
+
 
     }
 }
