--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,6 @@ android {
 dependencies {
 
 
-    
-    
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -33,7 +30,7 @@ dependencies {
 
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    androidTestCompile'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -45,7 +42,6 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     testCompile 'junit:junit:4.12'
 
-
     //google activity_login
     //implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
     compile 'com.google.firebase:firebase-auth:11.8.0'
@@ -56,7 +52,14 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:3.2.1'
     compile 'com.google.android.gms:play-services:11.8.0'
 
+    //Alerter Library
+    implementation 'com.tapadoo.android:alerter:2.0.4'
 
+    //Image Cropper
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
+   // compile 'com.isseiaoki:simplecropview:1.1.7'
+    //universal ımage loader
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     // Required only if Facebook activity_login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:4.30.0'
@@ -69,8 +72,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
 
 
-
 }
+
 
 
 
