EdiProfile Sayfasını Firebase bağlantısı gerçekleştirildi.Sadece kayıtlar yapılıyor daha veri çekme işlemi tamamlanmadı

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,9 @@
 
         <activity
             android:name=".Profile.EditProfile"
-            android:theme="@style/AppTheme2"></activity>
+            android:theme="@style/AppTheme2">
+
+        </activity>
 
         <activity android:name=".Profile.PhotoActivity" />
         <activity
