--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     //Alerter Library
     implementation 'com.tapadoo.android:alerter:2.0.4'
 
+    //ProgressBar
+    compile 'com.wang.avi:library:2.1.3'
 
     compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 
