--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,13 @@ dependencies {
 
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
-    compile 'com.android.support:cardview-v7:26.0.1'
-    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     testCompile 'junit:junit:4.12'
@@ -48,26 +47,12 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
-
     compile 'com.firebaseui:firebase-ui-auth:3.2.1'
     compile 'com.google.android.gms:play-services:11.8.0'
 
-    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
-
-    //Alerter Library
-    implementation 'com.tapadoo.android:alerter:2.0.4'
-
-    //ProgressBar
-    compile 'com.wang.avi:library:2.1.3'
-
-    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 
 
-    //Image Cropper
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
-   // compile 'com.isseiaoki:simplecropview:1.1.7'
-    //universal ımage loader
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
     // Required only if Facebook activity_login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:4.30.0'
@@ -75,6 +60,36 @@ dependencies {
     // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
     implementation("com.twitter.sdk.android:twitter-core:3.1.1@aar") { transitive = true }
 
+
+    //Splash Screen
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
+
+    //universal ımage loader
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //Discrete SeekBar
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
+
+//    //BottomSheet Fragment
+//    compile 'com.flipboard:bottomsheet-core:1.5.3'
+//    compile 'com.flipboard:bottomsheet-commons:1.5.3'
+
+    //BottomDialog
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
+
+   // compile "biz.laenger.android:vpbs:0.0.5"
+
+    //  compile 'com.orhanobut:dialogplus:1.11@aar'
+
+
+    //Alerter Library
+    implementation 'com.tapadoo.android:alerter:2.0.4'
+
+    //ProgressBar
+    compile 'com.wang.avi:library:2.1.3'
+
+    //Image Cropper
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
 
     apply plugin: 'com.google.gms.google-services'
     implementation 'com.facebook.android:facebook-login:[4,5)'
