--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".MapsActivityCurrentPlace" />
         <activity android:name=".AdvertCompany" />
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".JobSearch.JobSearch"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -63,6 +64,7 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".JobSearch.NearJobListActivity" />
     </application>
 
 </manifest>
