--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ allprojects {
 
         maven { url 'https://maven.fabric.io/public' }
         maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/andrea-rosa/maven/' }
+
 
 
     }
