--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,8 @@
         <activity android:name=".SignUp">
 
         </activity>
+        <activity android:name=".AddJobAdvert.AddJobAdvert"
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
     </application>
 
 </manifest>
