--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     //google activity_login
     //implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
     compile 'com.google.firebase:firebase-auth:11.8.0'
+
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
@@ -88,6 +89,8 @@ dependencies {
     //OkHttp Class
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
 
+//tooltip
+    compile 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
 
     //ProgressBar
     compile 'com.wang.avi:library:2.1.3'
