--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
     compile 'com.firebaseui:firebase-ui-auth:3.2.1'
-    compile 'com.google.android.gms:play-services:11.8.0'
+    implementation 'com.google.android.gms:play-services:11.8.0'
 
 //google maa utils
-    compile 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
     // Required only if Facebook activity_login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:4.30.0'
@@ -110,7 +110,7 @@ dependencies {
     //Stepper Layout
     compile 'com.stepstone.stepper:material-stepper:4.3.1'
 
-    apply plugin: 'com.google.gms.google-services'
+   // apply plugin: 'com.google.gms.google-services'
     implementation 'com.facebook.android:facebook-login:[4,5)'
 
 
